cluster/apps/smokeping/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: smokeping
  name: smokeping
  namespace: smokeping
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: smokeping
  type: ClusterIP
