cluster/apps/smokeping/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: smokeping
  labels:
    app: smokeping
  name: smokeping
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: smoke.${INTERNAL_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: smokeping
            port:
              number: 80
